--- a/index.html
+++ b/index.html
@@ -17,17 +17,21 @@
   </head>
   <body>
     <main>
-      <div>
-        <div>
-          10,000+ of our users love our products. We only provide great products
-          combined with excellent customer service. See what our satisfied
-          customers are saying about our services.
-        </div>
-        <div>
-          Rated 5 Stars in Reviews Rated 5 Stars in Report Guru Rated 5 Stars in
-          BestTech
-        </div>
-      </div>
+      <section>
+        <article>
+          <div class="hero-text">10,000+ of our users love our products.</div>
+          <div class="hero-subtext">
+            We only provide great products combined with excellent customer
+            service. See what our satisfied customers are saying about our
+            services.
+          </div>
+        </article>
+        <article>
+          <div>Rated 5 Stars in Reviews</div>
+          <div>Rated 5 Stars in Report Guru</div>
+          <div>Rated 5 Stars in BestTech</div>
+        </article>
+      </section>
       <div>
         <div>
           Colton Smith Verified Buyer "We needed the same printed design as the
