--- a/index.html
+++ b/index.html
@@ -27,9 +27,36 @@
           </div>
         </article>
         <article>
-          <div>Rated 5 Stars in Reviews</div>
-          <div>Rated 5 Stars in Report Guru</div>
-          <div>Rated 5 Stars in BestTech</div>
+          <div>
+            <span>
+              <img src="./images/icon-star.svg" alt="star" />
+              <img src="./images/icon-star.svg" alt="star" />
+              <img src="./images/icon-star.svg" alt="star" />
+              <img src="./images/icon-star.svg" alt="star" />
+              <img src="./images/icon-star.svg" alt="star" />
+            </span>
+            <span>Rated 5 Stars in Reviews</span>
+          </div>
+          <div>
+            <span>
+              <img src="./images/icon-star.svg" alt="star" />
+              <img src="./images/icon-star.svg" alt="star" />
+              <img src="./images/icon-star.svg" alt="star" />
+              <img src="./images/icon-star.svg" alt="star" />
+              <img src="./images/icon-star.svg" alt="star" />
+            </span>
+            <span> Rated 5 Stars in Report Guru</span>
+          </div>
+          <div>
+            <span>
+              <img src="./images/icon-star.svg" alt="star" />
+              <img src="./images/icon-star.svg" alt="star" />
+              <img src="./images/icon-star.svg" alt="star" />
+              <img src="./images/icon-star.svg" alt="star" />
+              <img src="./images/icon-star.svg" alt="star" />
+            </span>
+            <span>Rated 5 Stars in BestTech</span>
+          </div>
         </article>
       </section>
       <div>
