--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <main>
-      <section>
+      <section class="hero-section">
         <article>
           <div class="hero-text">10,000+ of our users love our products.</div>
           <div class="hero-subtext">
@@ -59,23 +59,29 @@
           </div>
         </article>
       </section>
-      <div>
-        <div>
-          Colton Smith Verified Buyer "We needed the same printed design as the
-          one we had ordered a week prior. Not only did they find the original
-          order, but we also received it in time. Excellent!"
-        </div>
-        <div>
+      <section class="testimonials">
+        <article>
+          <div>
+            <img src="./images/image-colton.jpg" alt="" srcset="" />
+            <span>Colton Smith <br/> Verified Buyer</span> 
+          </div>
+
+          "We needed the same printed design as the one we had ordered a week
+          prior. Not only did they find the original order, but we also received
+          it in time. Excellent!"
+        </article>
+        
+        <article>
           Irene Roberts Verified Buyer "Customer service is always excellent and
           very quick turn around. Completely delighted with the simplicity of
           the purchase and the speed of delivery."
-        </div>
-        <div>
+        </article>
+        <article>
           Anne Wallace Verified Buyer "Put an order with this company and can
           only praise them for the very high standard. Will definitely use them
           again and recommend them to everyone!"
-        </div>
-      </div>
+        </article>
+      </section>
     </main>
   </body>
 </html>
