--- a/index.html
+++ b/index.html
@@ -63,23 +63,39 @@
         <article>
           <div>
             <img src="./images/image-colton.jpg" alt="" srcset="" />
-            <span>Colton Smith <br/> Verified Buyer</span> 
+            <div>
+              <div>Colton Smith</div>
+              <div>Verified Buyer</div>
+            </div>
           </div>
-
           "We needed the same printed design as the one we had ordered a week
           prior. Not only did they find the original order, but we also received
           it in time. Excellent!"
         </article>
-        
+
         <article>
-          Irene Roberts Verified Buyer "Customer service is always excellent and
-          very quick turn around. Completely delighted with the simplicity of
-          the purchase and the speed of delivery."
+          <div>
+            <img src="./images/image-irene.jpg" alt="" srcset="" />
+            <div>
+              <div>Irene Roberts</div>
+              <div>Verified Buyer</div>
+            </div>
+          </div>
+          "Customer service is always excellent and very quick turn around.
+          Completely delighted with the simplicity of the purchase and the speed
+          of delivery."
         </article>
         <article>
-          Anne Wallace Verified Buyer "Put an order with this company and can
-          only praise them for the very high standard. Will definitely use them
-          again and recommend them to everyone!"
+          <div>
+            <img src="./images/image-anne.jpg" alt="" srcset="" />
+            <div>
+              <div>Ann Wallace</div>
+              <div>Verified Buyer</div>
+            </div>
+          </div>
+          "Put an order with this company and can only praise them for the very
+          high standard. Will definitely use them again and recommend them to
+          everyone!"
         </article>
       </section>
     </main>
