--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
               <div>Verified Buyer</div>
             </div>
           </div>
-          "We needed the same printed design as the one we had ordered a week
-          prior. Not only did they find the original order, but we also received
-          it in time. Excellent!"
+          <p>
+            "We needed the same printed design as the one we had ordered a week
+            prior. Not only did they find the original order, but we also
+            received it in time. Excellent!"
+          </p>
         </article>
 
         <article>
@@ -81,9 +83,11 @@
               <div>Verified Buyer</div>
             </div>
           </div>
-          "Customer service is always excellent and very quick turn around.
-          Completely delighted with the simplicity of the purchase and the speed
-          of delivery."
+          <p>
+            "Customer service is always excellent and very quick turn around.
+            Completely delighted with the simplicity of the purchase and the
+            speed of delivery."
+          </p>
         </article>
         <article>
           <div>
@@ -93,9 +97,11 @@
               <div>Verified Buyer</div>
             </div>
           </div>
-          "Put an order with this company and can only praise them for the very
-          high standard. Will definitely use them again and recommend them to
-          everyone!"
+          <p>
+            "Put an order with this company and can only praise them for the
+            very high standard. Will definitely use them again and recommend
+            them to everyone!"
+          </p>
         </article>
       </section>
     </main>
