--- a/index.html
+++ b/index.html
@@ -6,14 +6,25 @@
     <!-- displays site properly based on user's device -->
     <link rel="stylesheet" href="css/index.css" />
 
-    <!-- <link
+    <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
-    /> -->
+    />
 
-    <title>Social proof section</title>
+    <title>Frontend Mentor | Social proof section</title>
+
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
   </head>
   <body>
     <main>
@@ -105,5 +116,12 @@
         </article>
       </section>
     </main>
+
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">G-nm</a>.
+    </div>
   </body>
 </html>
